--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,17 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: #111111;
 }
 
 .video-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height:100vh;
-
+  height: 100vh;
 }
 .intro-video {
   height: auto;
   width: 100vmin;
-  position:relative;
+  position: relative;
 }
