--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -10,6 +10,7 @@
   text-align: center;
   display: flex;
   justify-content: center;
+
 }
 .jacube-letters-bounding {
   height: 100vh;
@@ -22,7 +23,7 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  height: 26vh;
+  height: 26vmin;
 }
 
 .letter {
@@ -50,4 +51,15 @@
 }
 .letter-e {
   margin-left: -3.2vmin;
+}
+
+.arrow{
+    height: 4vmin;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top:50vh;
+    left:49vw;
+    transform: translate(-50%, 80%);
 }
