--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,13 @@
 .navbar {
+  position: fixed;
   display: flex;
   justify-content: space-between;
+
   padding: 10px 20px;
-  background: black;
+  background: 111111;
   color: white;
-  height:10vh;
+  height: 10vh;
+
 }
 
 .navbar ul {
