--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,16 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  overflow-x: hidden;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* html,
+
+  html,
   body {
-    overflow: hidden;
-  } */
+    overflow-x: hidden;
+    /* position: relative; */
+    touch-action: pan-y;
+  }
 }
