--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #1B1B1B;
+  background-color: #111416;
 }
 
 .video-container {
