test horizontal scroll

--- a/src/components/SectionTitle.css
+++ b/src/components/SectionTitle.css
@@ -3,14 +3,14 @@
   src: url("@/fonts/BaskervilleOldFace.ttf") format("truetype");
 }
 
-body {
-}
-
 .wrapper {
   height: 30vmin;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
+  overflow-y: hidden;
+
 
 }
 
