--- a/src/components/About.css
+++ b/src/components/About.css
@@ -10,7 +10,7 @@
 .logoAbout {
   max-height: 640px;
   max-width: 640px;
-  width: 90vw;
+  width: 90%;
   height: auto;
 }
 .sticky-section {
@@ -26,6 +26,7 @@
 .custom-container {
   display: flex;
   justify-content: center;
+  margin-bottom:20vh;
 }
 
 .textblob{
