--- a/src/components/SectionTitle.css
+++ b/src/components/SectionTitle.css
@@ -12,11 +12,15 @@
   overflow-y: hidden;
   margin-top: 5vh;
   margin-bottom: 5vh;
+  z-index: 4;
 }
 
 .text {
   font-size: 26vmin;
   font-family: "Baskerville Old Face", serif;
+  z-index: 4;
+
+  
 
   /* transition: transform 0.5s ease-out; */
 
