--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,7 +4,7 @@
   justify-content: flex-end;
   align-items: center;
 
-  top: 0;
+  bottom: 0;
   left: 0;
   background: #111416;
   color: white;
@@ -14,7 +14,7 @@
 
 .socials {
   padding-right:2vw;
-  height: 5vmin;
-  width: 5vmin;
+  height: 5vh;
+  width: 5vh;
   object-fit: contain;
 }
