--- a/src/components/About.css
+++ b/src/components/About.css
@@ -24,9 +24,10 @@
 }
 
 .custom-container {
+  margin-top: 3vh;
   display: flex;
   justify-content: center;
-  margin-bottom:20vh;
+  margin-bottom:30vh;
 }
 
 .textblob{
