--- a/src/components/PageBuddies.css
+++ b/src/components/PageBuddies.css
@@ -24,5 +24,23 @@
 }
 
 .logo:nth-child(2) {
-  animation-delay: .23415s; /* Offset the second image */
+  animation-delay: .23415s; 
+}
+.logo:nth-child(3) {
+  animation-delay: .523s;
+}
+.logo:nth-child(4) {
+  animation-delay: .362s; 
+}
+.logo:nth-child(5) {
+  animation-delay: .1325;
+}
+.logo:nth-child(6) {
+  animation-delay: .4251s; 
+}
+.logo:nth-child(7) {
+  animation-delay: .2615s;
+}
+.logo:nth-child(8) {
+  animation-delay: .3932s;
 }
