height fix test for hero

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,7 +1,7 @@
 .hero {
-  height: 85vh;
+  height: 85dvh;
   width: auto;
-  margin-top: -15vh;
+  margin-top: -15dvh;
   background: url("/banner.jpg") no-repeat center;
   background-size: cover;
   color: white;
@@ -10,10 +10,9 @@
   text-align: center;
   display: flex;
   justify-content: center;
-
 }
 .jacube-letters-bounding {
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,13 +53,13 @@
   margin-left: -3.2vmin;
 }
 
-.arrow{
-    height: 4vmin;
-    width: auto;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top:50vh;
-    left:49vw;
-    z-index: 9999;
+.arrow {
+  height: 4vmin;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 50dvh;
+  left: 49vw;
+  z-index: 9999;
 }
