--- a/src/components/SectionTitle.css
+++ b/src/components/SectionTitle.css
@@ -23,6 +23,5 @@
   font-size: 20vmin;
   font-family: "Baskerville Old Face", serif;
   z-index: 4;
-
-  /* transition: transform 0.5s ease-out; */
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
 }
