--- a/src/components/CustomSongEmbed.css
+++ b/src/components/CustomSongEmbed.css
@@ -1,7 +1,16 @@
+@font-face {
+  font-family: "Circular-Std";
+  src: url("/fonts/circular-std-2.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .song-embed {
+  font-family: "Circular-Std", sans-serif;
+
   display: flex;
   align-items: center;
-  background: #18509D;
+  background: #18509d;
   padding: 12px;
   border-radius: 19px;
 }
@@ -21,53 +30,62 @@
 }
 
 .song-info {
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
   color: white;
+  text-align: start;
+
 }
 
-.song-title,
-.artist-link {
-  font-size: 13px;
+.song-title {
+  font-size: 15px;
   margin: 0;
-  font-weight: bold;
   color: white;
-  text-decoration: none; /* Remove underline */
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .song-title:hover,
 .artist-link:hover {
-  text-decoration: none; /* Ensure no underline on hover */
-}
-
-.artist {
-  font-size: 14px;
-  color: #b3b3b3;
-  margin: 4px 0;
+  text-decoration: underline;
+  color: white;
 }
 
 .artist-link {
-  color: #1db954;
+  text-decoration: none;
+  color: #a3b9d8;
 }
 
-.artist-link:hover {
-  text-decoration: none; /* Remove underline on hover */
+.artist {
+  font-size: 13px;
+  margin: 2px 0;
+  margin-top: 0;
+  text-decoration: none;
+  font-weight: lighter;
+  color: #a3b9d8;
+  text-align: start;
 }
 
 .play-button {
   display: inline-block;
-  margin-top: 6px;
   padding: 6px 12px;
-  background: #1db954;
+  padding-left: 0px;
+  background: #18509d;
   color: white;
   text-decoration: none;
   border-radius: 4px;
   font-size: 14px;
   font-weight: bold;
   transition: background 0.2s;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: start;
+
 }
 
 .play-button:hover {
-  background: #17a74a;
+  opacity: 0.8;
+  transition: opacity .2s;
 }
