shadow fix attempt

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -31,6 +31,9 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   z-index: 2;
+
+  will-change: transform, filter;
+  transform: translate3d(0, 0, 0);
 }
 
 .letter-a {
