--- a/src/components/SectionTitle.css
+++ b/src/components/SectionTitle.css
@@ -8,11 +8,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  z-index: 4;
+  overflow: hidden;
+  position: relative;
+  z-index: 1; 
   white-space: nowrap;
 }
+
 .flexwrap {
   display: flex;
   justify-content: center;
@@ -22,6 +23,6 @@
 .text {
   font-size: 20vmin;
   font-family: "Baskerville Old Face", serif;
-  z-index: 4;
   text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4);
+  z-index: 1;
 }
