--- a/src/components/About.css
+++ b/src/components/About.css
@@ -20,7 +20,7 @@
 }
 
 .custom-container {
-  margin-top: 30px;
+  /* margin-top: 30px; */
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
