--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
     /* position: relative; */
     touch-action: pan-y;
   }
-  
+  scrollbar-color: #111416 #111416;
+  scrollbar-width: thin;
 }
 
