--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
     /* position: relative; */
     touch-action: pan-y;
   }
-  scrollbar-color: #111416 #111416;
+  scrollbar-color: #F5F5F7 #111416;
   scrollbar-width: thin;
 }
 
