--- a/src/App.css
+++ b/src/App.css
@@ -9,49 +9,21 @@ body {
   background-color: #111416;
 }
 
-.app {
-  position: relative;
-  z-index: 2; /* Content appears below the mask */
-  padding: 20px;
-  background: white; /* The masked area will reveal this */
+@font-face {
+  font-family: "TT Directors Demo Regular";
+  src: url("/fonts/tt-directors-demo.bl-regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-
-.mask-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  mask-image: url("./assets/jacubefull.svg"); /* Path to your SVG */
-  mask-repeat: no-repeat;
-  mask-position: center;
-  mask-size: contain; /* Adjust size as needed */
-  -webkit-mask-image: url("./assets/jacubefull.svg"); /* For WebKit browsers */
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  -webkit-mask-size: contain;
-  background: white; /* Color that the mask will show */
-  z-index: 100; /* Ensure it’s above all content */
-  pointer-events: none;
-  mix-blend-mode: difference;
+@font-face {
+  font-family: "Marcovaldo Regular Trial";
+  src: url("/fonts/Marcovaldo-Regular-trial.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-.navbarroot {
-  display: flex;
-  position: relative;
-
-  justify-content: center;
-  align-items: center;
-  top: 10px;
-  left: 0;
-  width: 100%;
-  height: 75px;
-}
-.navbarmask {
-  position: fixed;
-  width: 200%;
-  height: 200px;
-  mix-blend-mode: difference; /* Dynamically blend the SVG with elements underneath */
-  pointer-events: none;
-  z-index: 10; /* Ensure it doesn't block interactions */
-  mix-blend-mode: difference;
+@font-face {
+  font-family: "Vivaldi Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: url("/fonts/VIVALDII.woff") format("woff");
 }
