--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -54,9 +54,11 @@
 }
 
 .arrow {
-  height: 4vmin;
+  height: 2rem;
   width: auto;
   position: absolute;
-  left: 49vw;
+  left: 48.5vw;
   z-index: 9999;
+  mix-blend-mode: difference;
+  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 1));
 }
