--- a/src/components/SpotSection.css
+++ b/src/components/SpotSection.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 .songDisplay {
