--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Crostan Bold", sans-serif;
+  font-family: "Marcovaldo Regular Trial", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #111416;
