--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  font-family: "Crostan Light", sans-serif;
+  margin: 0;
+}
+
 @font-face {
   font-family: "TT Directors Demo Regular";
   src: url("/fonts/tt-directors-demo.bl-regular.ttf") format("truetype");
