--- a/src/components/VideoSection.css
+++ b/src/components/VideoSection.css
@@ -36,14 +36,10 @@
   position: absolute;
   left: 0;
   width: 100%;
-  height: 100vh; 
-  background: linear-gradient(
-    to bottom,
-    #111416 900%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  height: 100vh;
+  background: linear-gradient(to bottom, #111416 900%, rgba(0, 0, 0, 0) 100%);
   pointer-events: none;
-  z-index: 2; 
+  z-index: 2;
 }
 
 .video-overlay::before {
@@ -52,8 +48,12 @@
   top: 0;
   left: 0;
   width: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.2) 0%,
+    transparent 100%
+  );
   height: 50%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, transparent 100%);
-  pointer-events: none; 
+  pointer-events: none;
   z-index: 1;
 }
