--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,9 @@ body {
 }
 
 h1 {
-  font-family: "Gotham Light", sans-serif;
+  font-family: "Circular-Std", sans-serif;
   margin: 0;
+  color: #e8e8e8;
 }
 
 h2 {
@@ -60,6 +61,12 @@ h2 {
   font-style: normal;
   font-weight: normal;
   src: url("/fonts/crostan.light.otf") format("opentype");
+}
+@font-face {
+  font-family: "Circular-Std";
+  src: url("/fonts/circular-std-2.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 video::-webkit-media-controls {
